Add styling to footer.php // Add imagges in assets

--- a/themes/rcforward/sass/_charity.scss
+++ b/themes/rcforward/sass/_charity.scss
@@ -48,7 +48,7 @@
         font-size: 42px;
         margin: 0 20px 0 0;
         color: $innovative__purple;
-        font-family: $gotham__font;
+        font-family: $montserrat__font;
         font-weight: bold;
         line-height: 60px;
         letter-spacing: normal;
@@ -61,7 +61,7 @@
             width: 728px;
             margin-left: auto;
             margin-right: auto;
-            font-family: $gotham__font;
+            font-family: $montserrat__font;
             font-size: 24px;	
             font-weight: 300;	
             line-height: 33px;	
@@ -81,7 +81,7 @@
   .browse-charities-title{
       text-align: center;	
       color:$credible__blue;
-      font-family: $gotham__font;	
+      font-family: $montserrat__font;	
       font-size: 28px;	
       font-weight: bold;	
       line-height: 31px;
