--- a/themes/rcforward/sass/_footer.scss
+++ b/themes/rcforward/sass/_footer.scss
@@ -1,20 +1,82 @@
 .site-footer {
+  background-color: $credible__blue;
+  @include display-flex();
+  flex-direction: column;
+  color: $white;
+  font-size: 1.12rem;
+  padding: 1.4rem 0;
   .footer-site-logo {
+    order: 1;
     a {
       .rcforward-logo {
         color: $white;
         text-transform: uppercase;
         text-align: center;
+        margin: 2.3rem 0;
       }
     }
   }
   .footer-nav {
-      display: none;
+    display: none;
   }
   .footer-info {
-
+    order: 3;
+    text-align: center;
+    .footer-maple-leaf {
+      width: 70%;
+    }
+    p {
+      display: none;
+    }
   }
   .footer-info-sm {
-      
+    @include display-flex();
+    flex-direction: column;
+    order: 2;
+    .text-description {
+      width: 88%;
+      order: 2;
+      @include display-flex();
+      flex-direction: column;
+      & p:first-child {
+        margin: 1.4rem 0;
+      }
+      & p:last-child {
+        line-height: 2rem;
+        margin-bottom: 1rem;
+        text-align: center;
+      }
+      .footer-info-logo {
+        width: 50%;
+        max-height: 8rem;
+        object-fit: fill;
+      }
+    }
+    .font-link {
+      order: 1;
+      .mail {
+        background-image: url('../../assets/images/facebook.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: inline-block;
+        height: 3rem;
+        width: 3rem;
+        margin: 0 1rem;
+      }
+      .facebook {
+        background-image: url('../../assets/images/mail.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: inline-block;
+        height: 3rem;
+        width: 3rem;
+        margin: 0 1rem;
+      }
+    }
+  }
+  .footer-copyright {
+    order: 4;
   }
 }
