--- a/themes/rcforward/sass/_fonts.scss
+++ b/themes/rcforward/sass/_fonts.scss
@@ -2,25 +2,25 @@
 # Embedded Fonts
 --------------------------------------------------------------*/
 @font-face {
-    font-family: 'Gilroy';
-    src: url('Gilroy-Light.eot');
-    src: url('Gilroy-Light.eot?#iefix') format('embedded-opentype'),
-        url('Gilroy-Light.woff2') format('woff2'),
-        url('Gilroy-Light.woff') format('woff'),
-        url('Gilroy-Light.ttf') format('truetype'),
-        url('Gilroy-Light.svg#Gilroy-Light') format('svg');
+    font-family: 'Gilroy Light';
+    src: url('../../assets/gilroy-font/Gilroy-Light.eot');
+    src: url('../../assets/gilroy-font/Gilroy-Light.eot?#iefix') format('embedded-opentype'),
+        url('../../assets/gilroy-font/Gilroy-Light.woff2') format('woff2'),
+        url('../../assets/gilroy-font/Gilroy-Light.woff') format('woff'),
+        url('../../assets/gilroy-font/Gilroy-Light.ttf') format('truetype'),
+        url('../../assets/gilroy-font/Gilroy-Light.svg#Gilroy-Light') format('svg');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Gilroy';
-    src: url('Gilroy-ExtraBold.eot');
-    src: url('Gilroy-ExtraBold.eot?#iefix') format('embedded-opentype'),
-        url('Gilroy-ExtraBold.woff2') format('woff2'),
-        url('Gilroy-ExtraBold.woff') format('woff'),
-        url('Gilroy-ExtraBold.ttf') format('truetype'),
-        url('Gilroy-ExtraBold.svg#Gilroy-ExtraBold') format('svg');
+    font-family: 'Gilroy Bold';
+    src: url('../../assets/gilroy-font/Gilroy-ExtraBold.eot');
+    src: url('../../assets/gilroy-font/Gilroy-ExtraBold.eot?#iefix') format('embedded-opentype'),
+        url('../../assets/gilroy-font/Gilroy-ExtraBold.woff2') format('woff2'),
+        url('../../assets/gilroy-font/Gilroy-ExtraBold.woff') format('woff'),
+        url('../../assets/gilroy-font/Gilroy-ExtraBold.ttf') format('truetype'),
+        url('../../assets/gilroy-font/Gilroy-ExtraBold.svg#Gilroy-ExtraBold') format('svg');
     font-weight: 800;
     font-style: normal;
 }
