--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -249,11 +249,7 @@ a {
 .chimp-donate-form {
   background: #00BEA8; }
 
-<<<<<<< HEAD
 @media (min-width: 1000px) {
-=======
-@media (min-width: 650px) {
->>>>>>> 7c5fa19a6240ed0c287ef114adc5a2953bfd0eac
   .main-navigation .menu-item-has-children {
     position: relative; }
     .main-navigation .menu-item-has-children .sub-menu {
@@ -673,7 +669,6 @@ body {
 .hamburger-inner::after {
   bottom: -10px; }
 
-<<<<<<< HEAD
 /*
    * Boring
    */
@@ -701,103 +696,6 @@ body {
   @media (min-width: 650px) {
     .hamburger--boring {
       display: none; } }
-=======
-/* Hamburger Container*/
-.hamburger {
-  right: 0;
-  top: 0; }
-  @media (min-width: 650px) {
-    .hamburger {
-      display: none; } }
-  .hamburger .hamburger--boring .menu-toggle {
-    background: #14225f; }
-  .hamburger button {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    background: none;
-    border: none; }
-
-/* Header */
-.site-header {
-  top: 0;
-  background: #14225f;
-  width: 100%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: auto; }
-  .site-header .site-logo {
-    width: 50%; }
-    @media (min-width: 650px) {
-      .site-header .site-logo {
-        width: 40%; } }
-    .site-header .site-logo h1 {
-      color: #fff;
-      padding-left: 55px; }
-  .site-header .hamburger {
-    width: 50%;
-    padding-right: 55px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end; }
-    @media (min-width: 650px) {
-      .site-header .hamburger {
-        display: none; } }
-  .site-header .main-navigation {
-    width: 100%; }
-    @media (min-width: 650px) {
-      .site-header .main-navigation {
-        width: 60%; } }
-    .site-header .main-navigation .menu {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      text-align: center; }
-      @media (min-width: 650px) {
-        .site-header .main-navigation .menu {
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex; } }
-      .site-header .main-navigation .menu .menu-item {
-        border-top: 1px solid #fff;
-        padding-top: 15px;
-        padding-bottom: 15px; }
-        @media (min-width: 650px) {
-          .site-header .main-navigation .menu .menu-item {
-            border: none; } }
-        .site-header .main-navigation .menu .menu-item a {
-          font-weight: 300;
-          color: #fff;
-          font-size: 18px; }
-  .site-header .menu-header-menu-container .menu:last-child {
-    padding-top: 15px; }
-    .site-header .menu-header-menu-container .menu:last-child .sub-menu {
-      display: none;
-      background: ye;
-      list-style: none;
-      padding: 0; }
-<<<<<<< HEAD
-      @media (min-width: 650px) {
-        .site-header .menu .menu-item-71 .sub-menu {
-=======
-      @media (min-width: 600px) {
-        .site-header .menu-header-menu-container .menu:last-child .sub-menu {
->>>>>>> 307420d5cbf582d8ec53264cf482a660768a4ccb
-          display: none; } }
-      .site-header .menu-header-menu-container .menu:last-child .sub-menu .menu-item {
-        border-bottom: 1px solid #14225F;
-        padding: 16px; }
-        .site-header .menu-header-menu-container .menu:last-child .sub-menu .menu-item a {
-          color: #14225F; }
->>>>>>> 7c5fa19a6240ed0c287ef114adc5a2953bfd0eac
 
 * {
   -webkit-box-sizing: border-box;
@@ -945,20 +843,17 @@ ol.flickity-page-dots {
       letter-spacing: normal;
       font-style: normal; }
   .single-charity .entry-content .charity-description {
-    height: 100%;
+    height: 137px;
     font-style: normal;
     width: 728px;
-<<<<<<< HEAD
-    margin: 64px auto 64px auto;
-=======
     margin-left: auto;
     margin-right: auto;
->>>>>>> 7c5fa19a6240ed0c287ef114adc5a2953bfd0eac
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
     font-weight: 300;
     line-height: 33px;
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 64px; }
   .single-charity .entry-content .charity-video {
     text-align: center; }
     .single-charity .entry-content .charity-video iframe {
@@ -972,6 +867,40 @@ ol.flickity-page-dots {
   font-size: 28px;
   font-weight: bold;
   line-height: 31px; }
+
+/* Main Content Section */
+.last-with-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 10px; }
+
+.content-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.content-next {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.main-content {
+  background: #F9F5ED; }
+  .main-content button {
+    text-align: center;
+    color: #14225F;
+    font-family: "Montserrat", sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+    line-height: 31px; }
 
 /* Main Content Section */
 .single-content .content-image {
@@ -1038,7 +967,6 @@ ol.flickity-page-dots {
   padding: 10px;
   background: #fff; }
 
-<<<<<<< HEAD
 /* Contact Page */
 @media (min-width: 650px) {
   .page-template-page-contact .site-content {
@@ -1134,14 +1062,6 @@ ol.flickity-page-dots {
       border-radius: 5px;
       height: 62px; }
 
-.site-footer .footer-site-logo a .rcforward-logo {
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center; }
-
-.site-footer .footer-nav {
-  display: none; }
-=======
 .site-footer {
   background-color: #14225F;
   display: -webkit-box;
@@ -1258,7 +1178,6 @@ ol.flickity-page-dots {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4; }
->>>>>>> 7c5fa19a6240ed0c287ef114adc5a2953bfd0eac
 
 .why-donate {
   text-align: center; }
@@ -1317,7 +1236,21 @@ ol.flickity-page-dots {
               box-shadow: none; }
     .custom-plan .single-custom-plan button {
       margin-top: -1rem; }
-<<<<<<< HEAD
+
+.home .entry-header {
+  padding: 2rem 6rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .home .entry-header .header-content {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%; }
+    .home .entry-header .header-content a {
+      width: 8rem;
+      margin: auto 1rem; }
+    .home .entry-header .header-content .donate-page-button {
+      color: #00BEA8;
+      border: 1px solid #00BEA8; }
 
 .home .choose-fund {
   padding: 2rem 6rem; }
@@ -1378,99 +1311,3 @@ ol.flickity-page-dots {
         color: white;
         text-align: center;
         margin: 0 auto; }
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 5fed6c894849d82b4534f6853cc5310ce8a69dca
->>>>>>> c590575265e0bcd82d5845260c2817245a4e37b3
-
-.home {
-  text-align: center; }
-  .home .entry-header {
-    padding: 2rem 6rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-    .home .entry-header .header-content {
-      -ms-flex-preferred-size: 50%;
-          flex-basis: 50%; }
-      .home .entry-header .header-content a {
-        width: 8rem;
-        margin: auto 1rem; }
-      .home .entry-header .header-content .donate-page-button {
-        color: #00BEA8;
-        border: 1px solid #00BEA8; }
-  .home .choose-fund {
-    padding: 2rem 6rem; }
-    .home .choose-fund .choose-fund-subtitle {
-      font-weight: 600; }
-    .home .choose-fund .choose-fund-description {
-      margin: 0 auto; }
-    .home .choose-fund .fund {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      margin: 3rem auto;
-      -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between; }
-      .home .choose-fund .fund .fund-entry {
-        border-radius: 10px;
-        border: 1px solid #d7d0f2;
-        -webkit-box-shadow: 0px 2px 2px #42299A;
-                box-shadow: 0px 2px 2px #42299A;
-        padding: 1rem;
-        -ms-flex-preferred-size: 30%;
-            flex-basis: 30%;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 60px auto 130px 55px; }
-        .home .choose-fund .fund .fund-entry:hover {
-          -webkit-box-shadow: 0px 3px 5px #42299A;
-                  box-shadow: 0px 3px 5px #42299A; }
-        .home .choose-fund .fund .fund-entry img {
-          width: 80px;
-          height: 80px;
-          margin: 0 auto; }
-        .home .choose-fund .fund .fund-entry a {
-          padding: 1rem 1.5rem;
-          background-color: #42299A;
-          border-radius: 7px;
-          width: 10rem;
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-pack: center;
-              -ms-flex-pack: center;
-                  justify-content: center;
-          -webkit-box-align: center;
-              -ms-flex-align: center;
-                  align-items: center;
-          color: white;
-          text-align: center;
-          margin: 0 auto; }
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 13446c5441c5a41af894e506924c9b3ec9456ae3
->>>>>>> c6f8fa380cde067d6a1d3e15b0cfda032433c8f7
->>>>>>> 5fed6c894849d82b4534f6853cc5310ce8a69dca
->>>>>>> c590575265e0bcd82d5845260c2817245a4e37b3
->>>>>>> 307420d5cbf582d8ec53264cf482a660768a4ccb
