Style header section of how it works page

--- a/themes/rcforward/sass/_content.scss
+++ b/themes/rcforward/sass/_content.scss
@@ -68,7 +68,7 @@ body {
 }
 
 /* Chimp Donate Button */
-.chimp-donate-form {
+.chimp-donate-form, .donate-page-button {
   background-color: $code__blue;
   font-size: 1.6rem;
   font-weight: 700;
