--- a/themes/rcforward/sass/_variables.scss
+++ b/themes/rcforward/sass/_variables.scss
@@ -30,6 +30,7 @@ $grounded__green: #192726;
 $sustainable__green: #8CB33E;
 $forest__green: #578744;
 $cream__background: #F9F5ED;
+$blue__background: rgba(216,216,216,0.18);
 $black: #000;
 $white: #fff;
 
